# fanfic_scraper

./: .gitignore  AssemblyInfo.vb  DataSet1.Designer.vb  DataSet1.xsd  FanficScraper.sln  HtmlGrabber.sln  HtmlGrabber.vbproj  INIFileReader.vb  LICENSE  Makefile  ModOleDB.vb  README.md  app.config  app.config.old  change_config.cmd  clsFFNet.vb  clsMediaMiner.vb  clsWinInet.vb  fanfic_scraper.sln  frmCategory.Designer.vb  frmCategory.vb  frmDebug.resx  frmDebug.vb  frmMain.vb  frmPath.resx  frmPath.vb  frmStory.Designer.vb  frmStory.vb  frmhtml.designer.vb  frmhtml.resx  frmhtml.vb  info.py  modFileManipulation.vb  modFormManagement.vb  modMain.vb  packages.config  pyproject.toml  requirements.txt  setup.py
Backup/: AssemblyInfo.vb  DataSet1.vb  HtmlGrabber.sln  HtmlGrabber.vbproj  IEME.vb  INIFileReader.vb  ModOleDB.vb  clsFFNet.vb  clsMediaMiner.vb  clsWinInet.vb  frmDebug.resx  frmDebug.vb  frmMain.resx  frmMain.vb  modFileManipulation.vb  modFormManagement.vb  modURLHelper.vb
BusinessLogic/: clsBL.vb
Data/: DataSet1.Designer.vb  ModOleDB.vb  ModOleDB.vb.old  XMLtoINI.xslt  clsConfig.vb  dsFanFic.Designer.vb  dsFanFic.vb  dsFanFic.xsd  dsFanFic.xss  nHibernateHelper.vb
FFArchive/: clean-onedrive  db_pony.py  ff  ff-h2t.py  sync_dl.sh  sync_ul.sh
FFDownload/: HtmlGrabber.sln  HtmlGrabber.vbproj  README.md  modMain.cs  packages.config
FFScraper/: README.md  requirements.txt
FanFic.Scraper/: Program.cs  Startup.cs  web_scraper.csproj
FanfictionDB/: HtmlGrabber.sln  HtmlGrabber.vbproj  LICENSE  app.config
Gui/: frmCategory.Designer.vb  frmCategory.resx  frmDebug.resx  frmDebug.vb  frmMain.vb  frmPath.vb  frmStory.Designer.vb  frmhtml.designer.vb  frmhtml.resx  frmhtml.vb
My Project/: Settings.Designer.vb  Settings.settings  Settings1.Designer.vb
Sites/: clsAFF.vb  clsFFNet.vb  clsFanfic.vb  clsFicWad.vb  clsMM.vb  clsMediaMiner.vb  clsYFF.vb
Utility/: cookie.vb  (+5 more)
(+203 files in other folders)
