[tool.poetry]
name = "fanfic_scraper"
version = "0.7.6.1"
description = "Scrapes fanfics, maintains download db, organizes folders when reading."
authors = ["Kevin Meredith <kevin@meredithkm.info>"]
license = "MIT"
homepage = "https://github.com/KebinuChiousu/fanfic_scraper"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.7"
requests = "^2.22"
html5lib = "^1.0"
html2text = "^2018.1"
pony = "^0.7.10"
tldextract = "^2.2"
pysocks = "^1.7"
fake_useragent = "^0.1.11"
lxml = "^4.4.2"

[tool.poetry.dev-dependencies]
fissix = "^19.2b1"
pipx = "^0.14.0"
flake8 = "^3.7.9"
pylint = "^2.12.0"

[tool.poetry.scripts]
fanfic-scraper = 'fanfic_scraper.fanfic_scraper:main'
ff = 'fanfic_scraper.ff:main'
ffdl = 'fanfic_scraper.ffdl:main'
ff-fif = 'fanfic_scraper.ff_fif:main'
ff-h2t = 'fanfic_scraper.ff_h2t:main'
ff-rf = 'fanfic_scraper.ff_rf:main'
html2text = 'html2text.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
